--- a/Final Webpage.html
+++ b/Final Webpage.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html style="background-color: red; color: yellow;">
     <head>
         <title>Younis Mubashar Raja</title>
     </head>
     <body>
-        <div style="background-color: yellow; color: red; width: 3;">
+        <div style="background-color: yellow; color: red; width: 380;">
             <h1><u>Younis Mubashar Raja</u></h1>
             <h3><u>Interesting Fact!</u></h3>
             <p>I have a Spanish passport but I do not...<br>
@@ -22,6 +21,18 @@
         <p style="background-color: blueviolet; color: salmon; width: 380;">I have...<br/>
             ...<br/>
             GONE ROGUE!!!!</p>
+        <div style="background-color: olive; color: peachpuff; width: 380;">
+            <table>
+                <thead>
+                   <th>Project</th>
+                    <th>Description</th>
+                </thead>
+                <tbody>
+                    <tr>Something</tr>
+                    <tr>Something else</tr>
+                </tbody>
+            </table>
+        </div>
         <a href="Final Webpage.html" style="color: yellow;">Click this. It is <u><b><i>DEFINITELY</i></b></u> a different page!</a>
     </body>
 </html>
